# kraft_dinner

./: README.md
KraftDinner/: KraftDinner.sln
KraftDinner/KraftDinner/: KraftDinner.inf  KraftDinner.vcxproj  KraftDinner.vcxproj.filters  Source.c
kraft_dinner/: .gitignore  Cargo.toml  README.md
kraft_dinner/.cargo/: config
kraft_dinner/src/: lib.rs  log.rs
